can jump to other pages but still have bug

--- a/frontend/myapp/src/pages/index.less
+++ b/frontend/myapp/src/pages/index.less
@@ -59,7 +59,7 @@
   margin: auto;
   box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
   margin-bottom: 60px;
-  justify-content: center; 
+  justify-content: flex-start; 
   align-items: center;
 }
 .course-Page {
@@ -183,6 +183,9 @@
 
 .intro-card .ant-card-meta-avatar {
   width: 'auto';
+}
+.custom-card  .ant-card-meta-avatar {
+  width: 50%;
 }
 .calendar {
   background: #ffffff;
